# PharmaGEN

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTRUCTIONS.txt  README.md  app.py  app_production.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
docs/: DEPLOYMENT.md  IMPROVEMENTS.md  QUICKSTART.md
